--- a/secret.html
+++ b/secret.html
@@ -5,6 +5,6 @@
         <title>Secret Page</title>
     </head>
     <body>
-
+        <p>You have reached the secret page.</p>
     </body>
 </html>
