--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Eben Carek's Portfolio</title>
+		<title>Eben Carek's Personal Portfolio</title>
 	</head>
 	<body>
 		<h1>Eben Carek</h1>
