Div class updates

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 
         <style>
+            #header {
+                background-color: black;
+            }
             h1 {
             color: #ea4335;
         }
@@ -17,17 +20,16 @@
         </style>
     
 
-
-
-
-
-
     </head>
+
     <body>
+    <div id = "header">
+
     <h1> <center> Erik Biberstein </center> </h1>
     <h2> <center> <i>Student at The Ohio State University </center></i> </h2>
     
         <hr />
+    </div>
     <p> Hello there! My name is Erik Biberstein and I am a sophomore Mechanical Engineer at The Ohio State University.  I am very interested in coding and I have built this website to showcase some of my work
     </p>
     <p> I am also seeking a mechanical engineering/computer science Summer co op or internship for 2016
