--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Eben Carek's Personal Portfolio</title>
+		<title>Eben Carek</title>
 	</head>
 	<body>
 		<h1>Eben Carek</h1>
 		<h2>Welcome to my little corner of the internet</h2>
 		<hr />
 		<p>
-			I know how to program <i>some</i> things.
+			This web page looks very <i>bland</i> and <b>boring.</b> But that's okay.
 		</p>
-		<h3>This list contains things I like to do and things I just like.</h3>
+		<h3>This list contains things I like</h3>
 		<ul>
 			<li>Eating</li>
 			<li>Sleeping</li>
-			<li><a href="http://funnything.com">This</a></li>
+			<li>Cats</li>
+			<li>Music</li>
+			<li><a href="https://pbs.twimg.com/profile_images/2259828152/image.jpg">This</a></li>
 		</ul>
-		<a href="http://linktocat.com">Link to cat</a>
+		<a href="http://static5.businessinsider.com/image/511d104a69bedd1f7c000012/grumpy-cat-definitely-did-not-make-100-million.jpg">Link to cat</a>
+		<p><a href="secret.html">There's also some stuff on this page.</a></p>
 	</body>
 </html>
