--- a/secret.html
+++ b/secret.html
@@ -5,6 +5,9 @@
         <title>Secret Page</title>
     </head>
     <body>
+        <h1>Welcome</h1>
+        <hr />
         <p>You have reached the secret page.</p>
+        <p>There's nothing for you here.</p>
     </body>
 </html>
