--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head bgcolor="#FFCCCC">
+  <head bgcolor="#B36666">
       <title>My Test Page </title>
   </head>
   <body bgcolor="#FFCCCC">
