--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head bgcolor="#B36666">
       <title>My Test Page </title>
   </head>
-  <body bgcolor="#B36666">
+  <body bgcolor="#FFCCCC">
       <h1><center>Stephen Gant</center></h1>
       <center><IMG SRC="Test.jpg" ALT="some text" WIDTH=150 HEIGHT=187></center>
       <h3><center>I can program..... <i>kinda</i></center></h3>
