--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       </ul>
       <a href="http://images.rapgenius.com/205030145a1abcaed4efe27133eb23c6.340x255x61.gif">My philosophy on life</a>
       <BR>
-      <a href="https://rawgit.com/stephengant/portfolio-site/master/anotherpage.html">link</a>
+      <a href="anotherpage.html">link</a>
   </body>
 </html>
