Added an html page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 				<li>Cat</li>	
 			</ul>
 			<a href = "http://majors.osu.edu/search.aspx"?> stuff </a>	
-			<a href = "http://web.cse.ohio-state.edu/~agrawal/"?> other stuff </a>	
+			<a href = "http://www.sheldonbrown.com/web_sample1.html"?> other stuff </a>	
 		</body>
 	</html>
